After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 607727 - gdm could show a warning when necessary fonts are not installed.
gdm could show a warning when necessary fonts are not installed.
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2010-01-22 05:01 UTC by Takao Fujiwara
Modified: 2010-01-27 16:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch for gdm-language-chooser-widget.c (1.09 KB, patch)
2010-01-22 05:05 UTC, Takao Fujiwara
committed Details | Review

Description Takao Fujiwara 2010-01-22 05:01:13 UTC
GDM shows a locale in case:
 - setlocale is succeeded
 - gdm.mo is installed
 - fonts are installed

I think it's useful for sysadmin or locale maintainers to show a warning when add_available_languages() is failed so that they notice fonts are not installed.
Comment 1 Takao Fujiwara 2010-01-22 05:05:39 UTC
Created attachment 151987 [details] [review]
Patch for gdm-language-chooser-widget.c

Attached the patch.
Comment 2 Ray Strode [halfline] 2010-01-27 16:53:58 UTC
I'm not sure a warning is right.  it's perfectly legitimate to not want to support every language for a site deployment.  Should probably be a debugging message though.
Comment 3 Ray Strode [halfline] 2010-01-27 16:58:18 UTC
Comment on attachment 151987 [details] [review]
Patch for gdm-language-chooser-widget.c

I commmited a modified form of this.