Add a message when fonts are not installed

If we can't show a language in the language chooser
because we don't have sufficient font coverage, then
inform the user in debug messages.

http://bugzilla.gnome.org/show_bug.cgi?id=607727